bat.string1.lessons.bat.string1.StringTimes.scala.error
stringTimes:1: error: unclosed character literal
def stringTimes(str:String, n:Int):String = {var s = ''
                                                     ^stringTimes:-6: error: Missing closing brace `}' assumed here
try {
^stringTimes:1: error: expected class or object definition
def stringTimes(str:String, n:Int):String = {var s = ''
^stringTimes:1: error: unclosed character literal
def stringTimes(str:String, n:Int):String = {var s = ''
                                                     ^